--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -10,7 +10,7 @@
 }
 
 .main-footer {
-  position: absolute;
+  /* position:  */
   width: 100%;
   border-top: 1px solid #333;
   bottom: -120px;
