--- a/react-app/src/components/TripDetail/TripDetail.css
+++ b/react-app/src/components/TripDetail/TripDetail.css
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 75px;
-  position: relative;
+  margin-top: 75px;
+  /* position: relative; */
   bottom: 100px;
   height: 100%;
   width: 100%;
